static/css/style.css
* {
  font-family: "Open Sans", sans-serif;
}
.cardblock {
  transition: transform 0.5s;
  background-color: white;
  border-style: solid;
  border-width: 2px;
}
@media (min-width: 980px) {
  .cardblock:hover {
    border-color: white;
    box-shadow: 0 0 50px white;
    transform: scale(1.05);
    transform-origin: top;
    z-index: 1000;
  }
}
@media (min-width: 481px) and (max-width: 980px) {
  .card-columns {
    column-count: 2;
  }
}
.navbar {
  background-color: #ed7d3a;
}
body {
  background-image: radial-gradient(
      rgba(255, 255, 255, 0.8),
      rgba(252, 175, 88, 0.9)
    ),
    url("/static/images/background_image.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 100%;
  background-attachment: fixed;
  margin: 0 auto;
}
.btn {
  margin: 6px;
}

h1 {
  font-weight: 400;
  font-size: 80px;
  font-family: "Courgette", cursive;
}

h2 {
  margin: 15px;
  font-weight: 300;
  font-size: 36px;
}
.hlogo {
  position: absolute;
  top: 0;
  right: 0;
  box-shadow: 0 0 30px white;
  border-radius: 20px;
}

